--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1">
+    <meta name="viewport" content="initial-scale=1, width=device-width" user-scalable="no">
     <title>Notissu</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="margin:0; width:1700px"></div>
   </body>
 </html>
